# GraphLayouts

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  main.cpp
assets/shaders/: V.glsl
include/graph_layouts/attribute_layout/: attribute_layout.h  traits.h
include/graph_layouts/attribute_layout/proxy/: proxy.h
include/graph_layouts/concepts/: concepts.h
include/graph_layouts/shader_layout/: shader_layout.h
include/graph_layouts/uniform_blocks_layout/: uniform_blocks_layout.h
include/graph_layouts/uniform_blocks_layout/iterators/: data.h  field.h  sequence.h  template_iterator.h  view.h
include/window/: window.h  window.inl
src/graph_layouts/attribute_layout/: attribute_layout.cpp
src/graph_layouts/uniform_blocks_layout/: uniform_blocks_layout.cpp
